# MultiModalDesktopControl

./: PR_BODY.md  README.md  RELEASE.md  debug_tracker.py  multimodal_desktop_control_prd.docx  pyproject.toml
.github/workflows/: ci.yml
desktop_control_prototype/: __init__.py  app.py  app_profiles.py  camera.py  command_adapter.py  config.py  confirm_manager.py  desktop_controller.py  gestures.py  intents.py  overlay.py  pointer_calibration.py  pointer_interactions.py  shortcuts.py  state_machine.py  tracker.py
docs/: architecture.md  setup.md  workflows.md
tests/: test_app_confirmation_flow.py  test_command_adapter.py  test_confirm_manager.py  test_intents.py  test_pointer_calibration.py  test_pointer_interactions.py  test_profiles.py
