[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-desktop-control"
version = "0.1.0"
description = "Prototype: control desktop with webcam gestures"
authors = [ { name = "Bhargav Koya" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["opencv-python", "mediapipe", "pyautogui", "numpy"]

[project.scripts]
mmdc = "desktop_control_prototype.app:main"
